updates the anchor tag text wikipedia to go to wikipedia

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <h4>
         Read up more about the poem on
-        <a href="https://en.wikipedia.org/wiki/Ozymandias">Wikipedia</a>
+        <a href="https://en.wikipedia.org/wiki/Ozymandias">go to wikipedia</a>
     </h4>
 
     <textarea placeholder="Leave your comments here..."></textarea>
