--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <hr size="5" color="black">
 
-    <h5>this is a assignment given in apna college web dev course. It will help me in understanding how git and github works.</h5>
-
+    <h5>This is a assignment given in apna college web dev course. It will help me in understanding how git and github works.</h5>
+    <h5>i am writing this to see branches in git</h5>
 </body>
 </html>
