changed the picture name in html file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     
 
-    <img src="1673064080267.jfif" alt="">
+    <img src="picture.jfif" alt="">
     <!-- Poem Name -->
 
     <!-- Poem -->
