updated the img tag

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     
 
-    <img src="picture.jfif" alt="">
+    <img src="picture.jfif" alt="there was supposed to be a image">
     <!-- Poem Name -->
 
     <!-- Poem -->
