changes to the author and anchor tag

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     </p>
 
     <!-- Poet's Name -->
-    <h3>by Percy Bysshe Shelley</h3>
+    <h3>by - Percy Bysshe Shelley</h3>
 
     <hr />
 
     <h4>
         Read up more about the poem on
-        <a href="https://en.wikipedia.org/wiki/Ozymandias">go to wikipedia</a>
+        <a href="https://en.wikipedia.org/wiki/Ozymandias">go to wiki</a>
     </h4>
 
     <textarea placeholder="Leave your comments here..."></textarea>
